--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
   },
   "dependencies": {
     "core-js": "^3.3.4",
-    "handlebars": "^4.5.3"
+    "fibers": "^4.0.2",
+    "handlebars": "^4.5.3",
+    "imagemin": "^5.0.0",
+    "perf_hooks": "0.0.1",
+    "sass": "^1.3.0"
   }
 }
